--- a/www/pre-licitacoes-inf-detalhes.html
+++ b/www/pre-licitacoes-inf-detalhes.html
@@ -50,7 +50,7 @@
 
 
         <div data-role="footer" data-position="fixed">
-            <h1>Transparência Maranguape</h1>
+            <h1>Transparência Jacu</h1>
         </div>
 
       
