--- a/www/pre-agentes-publicos.html
+++ b/www/pre-agentes-publicos.html
@@ -65,7 +65,7 @@
       
 
         <div data-role="footer" data-position="fixed">
-            <h1>Transparência Maranguape</h1>
+            <h1>Transparência Jacu</h1>
         </div>
 
         
