--- a/www/pre-receitas.html
+++ b/www/pre-receitas.html
@@ -31,7 +31,7 @@
       
 
         <div data-role="footer" data-position="fixed">
-            <h1>Transparência Maranguape</h1>
+            <h1>Transparência Jacu</h1>
         </div>
 
         <script type="text/javascript">
