--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
         <div data-role="main" class="ui-content" id="content">
 
             <div id="divIMG" style="">
-                <img src="img/lg.png" alt="image"/>
+                <img src="img/Jacu_logo.png" alt="image"/>
             </div>
             
              <form id="form_municipios">
