--- a/www/index.html
+++ b/www/index.html
@@ -48,6 +48,8 @@
 
             <div id="divIMG" style="">
                 <img src="img/Jacu_logo.png" alt="image"/>
+
+                <p class="name-app">Transparência Jacu</p>
             </div>
             
              <form id="form_municipios">
